measure auto size

--- a/templates/index.html
+++ b/templates/index.html
@@ -1892,9 +1892,13 @@
 
 
         let measure = new Measure();
+        measure.addNote('Rest', '1/8');
+        measure.addNote('La4', '1/8');
+        measure.addNote('Si4b4', '1/4');
+        measure.addNote('Re5', '3/16');
         measure.addNote('Do5#4', '1/16');
-        measure.addNote('Do5', '1/8');
-
+        measure.addNote('Si4b4', '1/4');
+        measure.addNote('Do5#4', '1/8');
         tmmScore.addMeasure(measure);
 
         measure = new Measure();
@@ -1906,13 +1910,7 @@
         measure.addNote('Rest', '1/2');
         measure.addNote('Rest', '1/1');
         */
-
-        measure.addNote('Do5#4', '1/8');
-        measure.addNote('Re5', '1/8');
-        measure.addNote('Do5#4', '1/4');
-        measure.addNote('Sol4', '3/8');
-        measure.addNote('La4', '1/4');
-
+        measure.addNote('Fa5', '1/8');
         tmmScore.addMeasure(measure);
         /*
         measure = new Measure();
